--- a/CSS/Classwork/indexflexbox.html
+++ b/CSS/Classwork/indexflexbox.html
@@ -14,17 +14,23 @@
   gap: 20px;
   height: 200px; /* useful for vertical alignment demos */
 }
-.item:nth-child(2) {
+.item-1 {
   order:2;
 }
-.item:nth-child(3) {
+.item-2 {
   order: 1;
 }
-.item:nth-child(4) {
-  order: 2;
+.item-3 {
+  order: 3;
 }
-.item:nth-child(5) {
+.item-4{
   order: 4;
+}
+.item-5{
+  order:0;
+}
+.item-6{
+  order: 5;
 }
 
 .item {
@@ -40,12 +46,12 @@
 </head>
 <body>
     <div class="container">
-  <div class="item">1</div>
-  <div class="item">2</div>
-  <div class="item">3</div>
-  <div class="item">4</div>
-  <div class="item">5</div>
-  <div class="item">6</div>
+  <div class="item item-1">1</div>
+  <div class="item item-2">2</div>
+  <div class="item item-3">3</div>
+  <div class="item item-4">4</div>
+  <div class="item item-5">5</div>
+  <div class="item item-6">6</div>
 </div>
 
 
