--- a/Java Script/DOM/index.html
+++ b/Java Script/DOM/index.html
@@ -11,7 +11,7 @@
 </body>
 </html> -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -39,8 +39,8 @@
 <body>
     <div class="small-box" id="box"></div>
     <button id="btn"></button>
-    <script>
-        // const body = document.querySelector("body");
+    <script> -->
+        <!-- // const body = document.querySelector("body");
         // const box = document.createElement("div");
         // const btn = document.createElement("button");
         // body.appendChild(box);
@@ -60,5 +60,24 @@
             box.classList.add("big-box");
         });
     </script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOM</title>
+</head>
+<body>
+    <h1 id="title">Hello</h1>
+    
+<!-- <script>
+const a = document.getElementById("title");
+console.log(a);
+</script> -->
+
+    
 </body>
 </html>
